# graphics

./: .gitignore  README.md
hello-world/: rainbow-square.cpp
opengl-testing/: CMakeLists.txt  README.md
opengl-testing/cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
opengl-testing/config/: openglTestingConfig.h.in
opengl-testing/headers/: common.hpp  controls.hpp
opengl-testing/shaders/: fragmentShader.glsl  vertexShader.glsl
opengl-testing/src/: Application  Application.cpp  application.cpp
opengl-testing/src/common/: BuildTransformMatrix.cpp  GenerateRandomColor.cpp  buildTransformMatrix.cpp  controls.cpp  generateRandomColor.cpp  loadShader.cpp  loadTexture.cpp
perlin-noise/: CMakeLists.txt  perlin_image.ppm
perlin-noise/cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake
perlin-noise/headers/: PerlinNoise.h  ppm.h
perlin-noise/src/: Main.cpp  application.cpp  perlin_noise.hpp  ppm.cpp  ppm.hpp
ray-tracer/: .gitignore  CMakeLists.txt  image.ppm
ray-tracer/headers/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  util.h  vec3.h
ray-tracer/src/: Main.cpp
